fix usage of stream API to older version